f: break out documentation into parts

--- a/README.textile
+++ b/README.textile
@@ -25,134 +25,12 @@ SPR is considered and expected to be only *semi* private for the following reaso
 
 For more information, please read "this wikipedia article":https://en.wikipedia.org/wiki/Convergent_encryption on "convergent encryption".
 
-h2. Size Hint
+h2. Specification / Documentation
 
-Since there are certain applications where it can be greatly beneficial to (at least approximately) know the size of a file before dereferecing it, such as ordering & scheduling HTTP fetches, spr1 supports and recommends using a size magnitude hint.
+* [[docs/common]] - Ideas and concepts that apply to more than one spr idea.
+* [[docs/spr1]] - A basic single-file encryption mechanism that does not effect the file size and maintains deduplication ability.
+* [[docs/spr2]] - A "tree-like" structure that makes use of the spr1 mechanisms, that is useful for capturing a changing directory of files. Basically allows one to map a string to a file, and express files & directories with near-arbitrary block sizes.
 
-As encoded, the hint is two visually-unambiguous Base47i characters (which together would yield a raw range of 0 to 2208).
-
-To scale this towards a more useful and granular range, we divide the raw output by *37*... this number is chosen to provide a cap at approximately one exabyte per reference (though, anything above that would *also* be represented as 'zz').
-
-We also specify that the encoding should yield the 'pessimestic' extreme (thinking the file to fetch and decode is too large)... to optimize for the cases of allocation or deadline scheduling (as a pleasant surprise is better than an unpleasant one).
-
-NB: The encoding is designed such that an spr1 consumer usually does not need to know how to encode or decode it. For common functions, simply sorting the spr1's "alphabetically" (where numberals come first and each lower case character is 'less than' its upper, which is yet 'less than' the next lower case character) will actually yield a list sorted by size, or (such as for fetching) can simply be ignored.
-
-Examples:
-
-A small black-and-white diagram... 3028 bytes...
-
-encoding:
-* 3028 bytes
-* ceil(log2(3028)*37) = 428 = 'd8'
-
-decoding:
-* 'd8' = 428
-* floor(2**(428/37)) = 3035 bytes
-* NOTE that the size hint (3035 bytes) decodes slightly LARGER than the ACTUAL file size (3028 bytes)!
-* 3035-3028= 7 bytes off
-
-A "normal" jpeg... 5.7MB
-* ceil(log2(5912044)*37)= 833 = 'it'
-* floor(2**(833/37))= 5987463 bytes
-* (5987463-5912044= 75419)/1024= 74 KB off
-
-A DVD ISO image... 4.4GB
-* ceil(log2(4688183296)*37)= 1189 = 'ng'
-* floor(2**(1189/37))= 4716714510
-* 4716714510-4688183296 = 28531214 bytes
-	* (/1024= 27863)/1024= 27MB off
-
-A large, 8TB hard drive (or image thereof)...
-* 8*10**12= 8000000000000
-* ceil(log2(8000000000000)*37)= 1586 = 'sT'
-* floor(2**(1586/37))= 8.0096e+12
-* about 10GB off...
-
-NB: Encoding less that 47 bytes would normally yield a single-digit base47i numeral, thus the suggested implementation should simply run the size through the math and base47i encoder... if the result is one character, prefix it with a zero, if it is two characters use it as-is (the common/expected case), and otherwise use 'zz'.
-
-h2. Binary Reference
-
-When stored in a minimal binary format, an spr1 reference takes a minimum of 40 bytes.
-* 20 bytes for the 'public' sha1 of the encrypted output, 
-* 20 bytes for the 'private' sha1 of the decrypted input, and
-* 2 optional bytes for the encoded size magnitude hint
-
-h2. URN Format
-
-spr1:zz:xxxxxxxxxxxxxxxxxxxxxxxxxxx:yyyyyyyyyyyyyyyyyyyyyyyyyyy
-
-h2. Reference String Format
-
-When stored as a human-copyable (yet machine locatable-and-parsable) textual identifier, the spr1 code usually takes 59 single-byte characters.
-
-Note: The string itself contains a version number, in case an improved SPR specification implementation is called for in the future.
-
-The reference string takes the following form:
-
-<pre>
-spr1-xxxxxxxxxxxxxxxxxxxxxxxxxxxyyyyyyyyyyyyyyyyyyyyyyyyyyy
-</pre>
-
-Or with the size-hint:
-
-<pre>
-spr1-zz-xxxxxxxxxxxxxxxxxxxxxxxxxxxyyyyyyyyyyyyyyyyyyyyyyyyyyy
-</pre>
-
-Where:
-* "spr1-" is a string-constant that can be used for pattern matching
-* "xxxxxxxxxxxxxxxxxxxxxxxxxxx" is the 27 character base64url-encoded SHA-1 hash of the *encrypted* file/bytes that can be used to fetch the cypher text from the underlying CAS system
-* "yyyyyyyyyyyyyyyyyyyyyyyyyyy" is the 27 character base64url-encoded SHA-1 hash of the *decrypted* file/bytes that is used to derive the symmetric key for both encryption and decryption
-* The optional "zz" segment is a strictly-two-digit base47i-encoded integer (ranging from zero to 2208) which gives an exponential "order-of-magnitude" for the referenced file size as interpreted above.
-
-Note that the xxx's and yyy's are joined together as two independent (character-separable) strings, and not as one large base64url-encoded byte string; which would yield a different result and require a bit of 'extra work' to separate the two keys, or to debug and diagnose the implementation as two halves (such as requiring a fetch-only identifier).
-
-Note that it is entirely possible to get a substring of '--' from following this specification, which might make including a spr1 reference in *html and xml-related comments* problematic.
-
-h2. Salsa20 Crypto Details
-
-Ordinarily, use of Salsa20 requires a 256-bit key and 64-bit nonce for a total of 320 bits (40 bytes) needed to initialize the stream cipher, but the current design trade-offs limit the amount of actual key/nonce data to 160 bits (HALF).
-
-Therefore, similar to the recommendations of Daniel Bernstein relating to using lesser key-sizes, we duplicate the available key data once to cover the remaining bits required for the key and nonce.
-
-160-bits (from the private SHA-1 hash) = 20 bytes (or 40 hexadecimal characters).
-
-The first 160-bits of the Salsa20 key-input are precisely the sha-1 private hash value. The remaining 96-bits (12 bytes) of the key are filled with the first 12-bytes of the same sha-1 private hash.
-
-The 64-bit nonce is filled with the remaining/lower 64-bits (8 bytes) of the same sha-1 private hash.
-
-<pre>
-Alignment (zero-based/array-indexes):
-+---------+-------+---------------+
-| 0-to-19 | 20-31 |     32-39     |
-+---------+-------+---------------+
-| -SHA-1- | ------SHA-1 --------- |
-| --Salsa20 Key-- | Salsa20 Nonce |
-+---------+-------+---------------+
-</pre>
-
-When we say "encrypt" the data, we are (of course) referring to storing the plaintext XOR'd with the appropriate relative output from the Salsa20 stream cipher.
-
-h2. Putting a block, and getting its SPR1
-
-# Compute the SHA-1 of the plaintext block, this is the *privateHash* (yyy's).
-# Encrypt the block with the Salsa20 algorithim (with the key & nonce as decribed above) using the privateHash.
-# Compute the SHA-1 of the encrypted block, this is the *publicHash* (xxx's).
-# Store the encrypted block at such a place (or in such a CAS system) that you can find it using the *publicHash*.
-# Compose the SPR by appending the base64url-encoded publicHash, then similarly-encoded privateHash to the constant string "spr1-".
-
-h2. Getting and verifying a block, given its SPR1
-
-# Extract the *publicHash* & *privateHash* byte-values from the SPR by splitting the string on the appropriate character boundaries and then base64url-decoding them.
-# Fetch the encrypted block using the *publicHash*
-# Initialize the Salsa20 stream cipher using the *privateHash*
-# Initialize two distinct SHA-1 digest algothims (which we will call *alpha* and *beta*).
-# For each segment of encrypted block that is read (which can be optimized to align with Salsa20's 512-bit/64-byte block size):
-## update *alpha* with the encrypted byte values
-## decrypt the bytes by XOR with the Salsa20 stream
-## update *beta* with the decrypted byte values
-# Finalize and compare *alpha* with the *publicHash*... this will tell you if the file has been tampered with (or otherwise corrupted) in storage.
-# Finalize and compare *beta* with the *privateHash*... this will confirm that the reference is valid, and has not been corrupted or 'guessed'.
 
 h2. Other Implementations
 
